examples/test/testpolicy14470.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14470
  namespace: namespace259
spec:
  podSelector:
    matchLabels:
      key6: value15
      key45: value22
      key43: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value3
          key34: value20
      podSelector:
        matchLabels:
          key2: value26
